--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "nomap"
 version = "0.2.0"
-authors = ["reslario <simon.kunze2310@gmail.com>"]
+authors = ["reslario <reslario.code@gmail.com>"]
 edition = "2018"
 description = "A parser for the `.map` file format used by Quake 1 & 2 as well as Half-Life 1, implemented using the nom parsing framework."
 repository = "https://github.com/reslario/nomap"
